Ad WearOS driver stub

--- a/sensorhub-android-app/res/xml/pref_sensors.xml
+++ b/sensorhub-android-app/res/xml/pref_sensors.xml
@@ -218,7 +218,19 @@
             android:entryValues="@array/sos_option_values"
             android:defaultValue="@array/sos_option_defaults" />
 
+        <SwitchPreference
+            android:key="wearos_enabled"
+            android:defaultValue="false"
+            android:summary="Enable streaming of Wear OS data"
+            android:title="WearOS Data" />
+
+        <MultiSelectListPreference
+            android:key="wearos_options"
+            android:title="Wear OS Output Options"
+            android:summary="Options for pushing sensor data"
+            android:entries="@array/sos_option_list"
+            android:entryValues="@array/sos_option_values"
+            android:defaultValue="@array/sos_option_defaults" />
+
     </PreferenceCategory>
-
-
 </PreferenceScreen>
