--- a/sensorhub-android-wearos-watch/src/main/res/layout/radar.xml
+++ b/sensorhub-android-wearos-watch/src/main/res/layout/radar.xml
@@ -10,4 +10,15 @@
         android:src="@drawable/compass"
         android:scaleType="centerCrop" />
 
+    <TextView
+        android:id="@+id/compassText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="90dp"
+        android:text="test"
+        android:textAlignment="center"
+        android:textColor="#979797"
+        android:textSize="8sp" />
+
 </androidx.wear.widget.BoxInsetLayout>
