--- a/sensorhub-android-wearos-watch/src/main/res/layout/radar.xml
+++ b/sensorhub-android-wearos-watch/src/main/res/layout/radar.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
         android:layout_marginTop="90dp"
-        android:text="test"
+        android:text=""
         android:textAlignment="center"
         android:textColor="#979797"
         android:textSize="8sp" />
