--- a/sensorhub-android-wearos-watch/src/main/res/layout/main.xml
+++ b/sensorhub-android-wearos-watch/src/main/res/layout/main.xml
@@ -36,9 +36,11 @@
             <Button
                 android:id="@+id/radarButton"
                 android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:text="Radar"
-                android:textSize="11sp"
+                android:layout_height="30dp"
+                android:paddingHorizontal="0dp"
+                android:paddingVertical="0dp"
+                android:text="@string/compass"
+                android:textSize="9sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
