--- a/sensorhub-android-app/res/xml/pref_sensors.xml
+++ b/sensorhub-android-app/res/xml/pref_sensors.xml
@@ -24,6 +24,28 @@
             android:entryValues="@array/controller_outputs_values"
              />
 
+        <SwitchPreference
+            android:key="sleep_monitor_enabled"
+            android:defaultValue="false"
+            android:summary="Enable streaming of Sleep Monitor"
+            android:title="Sleep Monitor Data" />
+
+        <MultiSelectListPreference
+            android:key="sleep_monitor_options"
+            android:title="Sleep Monitor Output Options"
+            android:summary="Options for pushing sensor data"
+            android:entries="@array/sos_option_list"
+            android:entryValues="@array/sos_option_values"
+            android:defaultValue="@array/sos_option_defaults" />
+
+        <MultiSelectListPreference
+            android:key="sleep_monitor_output_options"
+            android:title="Sleep Monitor Output Options"
+            android:summary="List of available output options"
+            android:entries="@array/sleep_monitor_outputs"
+            android:entryValues="@array/sleep_monitor_outputs_values"
+            />
+
 
         <SwitchPreference
             android:defaultValue="false"
