migrated to android x added in sensor enrollment qr code, and settings. still needs work on the push requests and setting up the  configs

--- a/sensorhub-android-app/res/xml/pref_headers.xml
+++ b/sensorhub-android-app/res/xml/pref_headers.xml
@@ -12,5 +12,7 @@
     <header
         android:fragment="org.sensorhub.android.UserSettingsActivity$AudioPreferenceFragment"
         android:title="Audio Settings" />
-    
+    <header
+        android:fragment="org.sensorhub.android.UserSettingsActivity$SensorEnrollmentPreferenceFragment"
+        android:title="@string/pref_header_sensor_enrollment" />
 </preference-headers>
