--- a/sensorhub-android-app/res/menu/main.xml
+++ b/sensorhub-android-app/res/menu/main.xml
@@ -32,4 +32,10 @@
         android:showAsAction="never"
         android:title="@string/action_about"/>
 
+    <item
+        android:id="@+id/action_enrollment"
+        android:orderInCategory="104"
+        android:showAsAction="never"
+        android:title="@string/action_enrollment"/>
+
 </menu>
