--- a/sensorhub-android-app/res/values/strings_activity_user_settings.xml
+++ b/sensorhub-android-app/res/values/strings_activity_user_settings.xml
@@ -2,4 +2,5 @@
     <string name="title_activity_user_settings">Settings</string>
     <string name="pref_header_general">General</string>
     <string name="pref_header_sensors">Sensors</string>
+    <string name="pref_header_sensor_enrollment">Sensor Enrollment</string>
 </resources>
