--- a/sensorhub-android-app/res/xml/pref_sensors.xml
+++ b/sensorhub-android-app/res/xml/pref_sensors.xml
@@ -232,6 +232,27 @@
             android:entryValues="@array/sos_option_values"
             android:defaultValue="@array/sos_option_defaults" />
 
+
+<!--        <SwitchPreference-->
+<!--            android:key="sensor_enrollment_enabled"-->
+<!--            android:defaultValue="false"-->
+<!--            android:summary="Enable streaming of Sensor Enrollment data"-->
+<!--            android:title="Sensor Enrollment Data"-->
+<!--        />-->
+
+<!--        <MultiSelectListPreference-->
+<!--            android:key="sensor_enrollment_options"-->
+<!--            android:title="Sensor EnrollmentOutput Options"-->
+<!--            android:summary="Options for pushing sensor data"-->
+<!--            android:entries="@array/sos_option_list"-->
+<!--            android:entryValues="@array/sos_option_values"-->
+<!--            android:defaultValue="@array/sos_option_defaults"-->
+<!--        />-->
+
+
+
+
+
     </PreferenceCategory>
 
 
