--- a/sensorhub-android-app/res/xml/pref_sensors.xml
+++ b/sensorhub-android-app/res/xml/pref_sensors.xml
@@ -232,6 +232,20 @@
             android:entryValues="@array/sos_option_values"
             android:defaultValue="@array/sos_option_defaults" />
 
+        <SwitchPreference
+                android:key="obd2_enabled"
+                android:defaultValue="false"
+                android:summary="Enable streaming of OBD2 sensor data (sensor must be connected via Bluetooth LE on startup)"
+                android:title="OBD2 Data" />
+
+        <MultiSelectListPreference
+                android:key="obd2_options"
+                android:title="OBD2 Output Options"
+                android:summary="Options for pushing sensor data"
+                android:entries="@array/sos_option_list"
+                android:entryValues="@array/sos_option_values"
+                android:defaultValue="@array/sos_option_defaults" />
+
     </PreferenceCategory>
 
 
